--- a/css/estilos.css
+++ b/css/estilos.css
@@ -4,43 +4,61 @@ body {
     color: white;
 }
 
+body::before {
+    content:"";
+    background-image: url(../imagens/bg-desktop.jpg);
+    background-repeat: no-repeat ;
+    background-size: cover;
+    background-position: center;
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    z-index: -1;
+    opacity: 0.2;
+}
 .cabecalho {
-    background-color: aqua;
+   
     display: flex;
     justify-content: center;
 }
 
 .selecao-de-personagens {
-    background-color: blueviolet;
+    
     display: flex;
-    align-items:;
+    align-items:center;
     gap: 30px;
+    min-height: calc(100vh - 152px);
+    justify-content: center;
+    
+}
+
+.selecao-de-personagens .lista-de-personagens {
+    
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
+
 }
 
 .selecao-de-personagens .personagens {
-    background-color: rgb(15, 72, 122);
+    
     display: flex;
     flex-direction: column;
     align-items: center;
     max-width: 585px;
     gap: 25px;
-}
-.selecao-de-personagens .lista-de-personagens {
-    display: flex;
-    background-color:brown;
-    flex-wrap: wrap;
-    gap: 30px;
-    justify-content: center;
-}
 
-
+}
 
 .selecao-de-personagens .personagens .titulo {
     font-size: 20px;
     letter-spacing: 4px;
     text-transform: uppercase;
-    border-bottom: 2px solid #47f4ff;
+    border-bottom: 2px solid aqua;
     width: 100%;
+    text-align: center;
+
 }
 
 .lista-de-personagens .personagem img {
@@ -51,9 +69,30 @@ body {
 
 .lista-de-personagens .personagem.selecionado {
     box-shadow: 0px 0px 24px 5px #0271f7;
-    
+} 
+
+.personagem-selecionado {
+   
+    text-align: center;
+    max-height: 530px;
 
 }
-.personagem-selecionado {
-    background-color: green;
+
+.personagem-selecionado .personagem-grande {
+    width: 430px;
+    height: 430px;
+}
+
+.personagem-selecionado .nome-personagem {
+    border-bottom: 2px solid aqua;
+    letter-spacing: 4px;
+    text-transform: uppercase;
+}
+
+.personagem-selecionado .descricao-personagem {
+    font-size: 16px;
+    line-height: 22px;
+    text-align: center;
+    margin-top: 20px;
+    width: 420px;
 }
