--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,7 +1,7 @@
 body {
     font-family: "Oxanium", cursive;
     background-color: black;
-    color: white;
+    color: rgb(255, 255, 255);
 }
 
 body::before {
