--- a/css/estilos.css
+++ b/css/estilos.css
@@ -61,6 +61,10 @@ body::before {
 
 }
 
+.lista-de-personagens .personagem {
+    border-bottom: 4px solid aqua;
+}
+
 .lista-de-personagens .personagem img {
     width: 100%;
     height: 100%;
